// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's setViewPortion destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "Np8pbQ",
  },
  "cascadeCreate": true,
  "itemId": "Np8pbQ",
  "portion": -70298178955509.76,
  "recommId": "Np8pbQ",
  "sessionId": "Np8pbQ",
  "timestamp": "Np8pbQ",
  "userId": "Np8pbQ",
}
`;

exports[`Testing snapshot for Recombee's setViewPortion destination action: required fields 1`] = `
Object {
  "cascadeCreate": true,
  "itemId": "Np8pbQ",
  "portion": -70298178955509.76,
  "userId": "Np8pbQ",
}
`;
